--- a/算法竞赛入门经典/第二章/.gitignore
+++ b/算法竞赛入门经典/第二章/.gitignore
@@ -1,2 +1,39 @@
 .vscode
 .DS_Store
+*.o
+data.out
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+.idea/*
